fix: white space in the bottom of tournaments list

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -52,6 +52,7 @@
   min-height: 76px;
   justify-content: center;
   align-items: center;
+  margin-bottom: -66px;
 }
 
 .mail {
